Fix #75 - G.6 Polling contract & cache headers
